Align trip view text correctly.

--- a/apps/site/web/static/css/_schedule.scss
+++ b/apps/site/web/static/css/_schedule.scss
@@ -148,7 +148,8 @@ body.no-js .subway-map {
 }
 
 .trip-list {
-  padding-left: 10px;
+  padding-left: 1.25em;
+  margin-bottom: 0;
 }
 
 .trip-stop {
